feat(screens): added textfield to ip screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="bridge_ip_address">Connect with IP address</string>
     <string name="bridge_connect">Connect</string>
     <string name="bridge_ip_placeholder">192.168.1.26</string>
+    <string name="bridge_ip_subheading">If you are aware of your Bridge\'s IP address, kindly enter it.</string>
 </resources>
