--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="you_don_t_have_permission_to_view_media">You don\'t have permission to view media</string>
     <string name="swatches">Swatches</string>
     <string name="camera_model">CAMERA_MODEL</string>
+    <string name="allow_camera_permission">Allow camera permission</string>
+    <string name="save_and_apply">Save and Apply</string>
 </resources>
