feat(screens): added functionality to display toasts on CameraScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="camera_model">CAMERA_MODEL</string>
     <string name="allow_camera_permission">Allow camera permission</string>
     <string name="save_and_apply">Save and Apply</string>
+    <string name="failed_to_save_bitmap">Failed to save bitmap.</string>
+    <string name="saved_image">Saved image</string>
 </resources>
